@@ -1,0 +1,212 @@
+.document
+ChangeLog
+GPL.txt
+LICENSE.txt
+README
+Rakefile
+bin/gem
+bin/update_rubygems
+doc/release_notes/docs-rubygems-announce.rdoc
+doc/release_notes/rel_0_2_0.rdoc
+doc/release_notes/rel_0_3_0.rdoc
+doc/release_notes/rel_0_4_0.rdoc
+doc/release_notes/rel_0_5_0.rdoc
+doc/release_notes/rel_0_6_0.rdoc
+doc/release_notes/rel_0_7_0.rdoc
+doc/release_notes/rel_0_8_0.rdoc
+doc/release_notes/rel_0_8_1.rdoc
+doc/release_notes/rel_0_8_3.rdoc
+doc/release_notes/rel_0_8_4.rdoc
+doc/release_notes/rel_0_8_5.rdoc
+doc/release_notes/rel_0_8_7.rdoc
+doc/release_notes/rel_0_8_10.rdoc
+doc/release_notes/rel_0_8_11.rdoc
+doc/release_notes/rel_0_9_0.rdoc
+doc/release_notes/rel_0_9_2.rdoc
+doc/release_notes/rel_0_9_3.rdoc
+doc/release_notes/rel_0_9_4.rdoc
+doc/release_notes/rel_0_9_5.rdoc
+doc/release_notes/rel_1_0_0.rdoc
+doc/release_notes/rel_1_0_1.rdoc
+doc/release_notes/rel_1_1_0.rdoc
+doc/release_notes/rel_1_1_1.rdoc
+doc/release_notes/rel_1_2_0.rdoc
+doc/release_notes/rel_1_3_0.rdoc
+doc/release_notes/rel_1_3_1.rdoc
+doc/release_notes/rel_1_3_2.rdoc
+lib/gauntlet_rubygems.rb
+lib/rbconfig/datadir.rb
+lib/rubygems.rb
+lib/rubygems/builder.rb
+lib/rubygems/command.rb
+lib/rubygems/command_manager.rb
+lib/rubygems/commands/build_command.rb
+lib/rubygems/commands/cert_command.rb
+lib/rubygems/commands/check_command.rb
+lib/rubygems/commands/cleanup_command.rb
+lib/rubygems/commands/contents_command.rb
+lib/rubygems/commands/dependency_command.rb
+lib/rubygems/commands/environment_command.rb
+lib/rubygems/commands/fetch_command.rb
+lib/rubygems/commands/generate_index_command.rb
+lib/rubygems/commands/help_command.rb
+lib/rubygems/commands/install_command.rb
+lib/rubygems/commands/list_command.rb
+lib/rubygems/commands/lock_command.rb
+lib/rubygems/commands/mirror_command.rb
+lib/rubygems/commands/outdated_command.rb
+lib/rubygems/commands/pristine_command.rb
+lib/rubygems/commands/query_command.rb
+lib/rubygems/commands/rdoc_command.rb
+lib/rubygems/commands/search_command.rb
+lib/rubygems/commands/server_command.rb
+lib/rubygems/commands/setup_command.rb
+lib/rubygems/commands/sources_command.rb
+lib/rubygems/commands/specification_command.rb
+lib/rubygems/commands/stale_command.rb
+lib/rubygems/commands/uninstall_command.rb
+lib/rubygems/commands/unpack_command.rb
+lib/rubygems/commands/update_command.rb
+lib/rubygems/commands/which_command.rb
+lib/rubygems/config_file.rb
+lib/rubygems/custom_require.rb
+lib/rubygems/defaults.rb
+lib/rubygems/dependency.rb
+lib/rubygems/dependency_installer.rb
+lib/rubygems/dependency_list.rb
+lib/rubygems/digest/digest_adapter.rb
+lib/rubygems/digest/md5.rb
+lib/rubygems/digest/sha1.rb
+lib/rubygems/digest/sha2.rb
+lib/rubygems/doc_manager.rb
+lib/rubygems/exceptions.rb
+lib/rubygems/ext.rb
+lib/rubygems/ext/builder.rb
+lib/rubygems/ext/configure_builder.rb
+lib/rubygems/ext/ext_conf_builder.rb
+lib/rubygems/ext/rake_builder.rb
+lib/rubygems/format.rb
+lib/rubygems/gem_openssl.rb
+lib/rubygems/gem_path_searcher.rb
+lib/rubygems/gem_runner.rb
+lib/rubygems/indexer.rb
+lib/rubygems/install_update_options.rb
+lib/rubygems/installer.rb
+lib/rubygems/local_remote_options.rb
+lib/rubygems/old_format.rb
+lib/rubygems/package.rb
+lib/rubygems/package/f_sync_dir.rb
+lib/rubygems/package/tar_header.rb
+lib/rubygems/package/tar_input.rb
+lib/rubygems/package/tar_output.rb
+lib/rubygems/package/tar_reader.rb
+lib/rubygems/package/tar_reader/entry.rb
+lib/rubygems/package/tar_writer.rb
+lib/rubygems/package_task.rb
+lib/rubygems/platform.rb
+lib/rubygems/remote_fetcher.rb
+lib/rubygems/require_paths_builder.rb
+lib/rubygems/requirement.rb
+lib/rubygems/rubygems_version.rb
+lib/rubygems/security.rb
+lib/rubygems/server.rb
+lib/rubygems/source_index.rb
+lib/rubygems/source_info_cache.rb
+lib/rubygems/source_info_cache_entry.rb
+lib/rubygems/spec_fetcher.rb
+lib/rubygems/specification.rb
+lib/rubygems/test_utilities.rb
+lib/rubygems/text.rb
+lib/rubygems/timer.rb
+lib/rubygems/uninstaller.rb
+lib/rubygems/user_interaction.rb
+lib/rubygems/validator.rb
+lib/rubygems/version.rb
+lib/rubygems/version_option.rb
+lib/ubygems.rb
+pkgs/sources/lib/sources.rb
+pkgs/sources/sources.gemspec
+scripts/gemdoc.rb
+scripts/specdoc.rb
+scripts/upload_gemdoc.rb
+setup.rb
+test/bogussources.rb
+test/data/gem-private_key.pem
+test/data/gem-public_cert.pem
+test/fake_certlib/openssl.rb
+test/foo/discover.rb
+test/functional.rb
+test/gem_installer_test_case.rb
+test/gem_package_tar_test_case.rb
+test/gemutilities.rb
+test/insure_session.rb
+test/mockgemui.rb
+test/private_key.pem
+test/public_cert.pem
+test/rubygems_plugin.rb
+test/simple_gem.rb
+test/test_config.rb
+test/test_gem.rb
+test/test_gem_builder.rb
+test/test_gem_command.rb
+test/test_gem_command_manager.rb
+test/test_gem_commands_build_command.rb
+test/test_gem_commands_cert_command.rb
+test/test_gem_commands_check_command.rb
+test/test_gem_commands_contents_command.rb
+test/test_gem_commands_dependency_command.rb
+test/test_gem_commands_environment_command.rb
+test/test_gem_commands_fetch_command.rb
+test/test_gem_commands_generate_index_command.rb
+test/test_gem_commands_install_command.rb
+test/test_gem_commands_list_command.rb
+test/test_gem_commands_lock_command.rb
+test/test_gem_commands_mirror_command.rb
+test/test_gem_commands_outdated_command.rb
+test/test_gem_commands_pristine_command.rb
+test/test_gem_commands_query_command.rb
+test/test_gem_commands_server_command.rb
+test/test_gem_commands_sources_command.rb
+test/test_gem_commands_specification_command.rb
+test/test_gem_commands_stale_command.rb
+test/test_gem_commands_uninstall_command.rb
+test/test_gem_commands_unpack_command.rb
+test/test_gem_commands_update_command.rb
+test/test_gem_config_file.rb
+test/test_gem_dependency.rb
+test/test_gem_dependency_installer.rb
+test/test_gem_dependency_list.rb
+test/test_gem_digest.rb
+test/test_gem_doc_manager.rb
+test/test_gem_ext_configure_builder.rb
+test/test_gem_ext_ext_conf_builder.rb
+test/test_gem_ext_rake_builder.rb
+test/test_gem_format.rb
+test/test_gem_gem_path_searcher.rb
+test/test_gem_gem_runner.rb
+test/test_gem_indexer.rb
+test/test_gem_install_update_options.rb
+test/test_gem_installer.rb
+test/test_gem_local_remote_options.rb
+test/test_gem_package_tar_header.rb
+test/test_gem_package_tar_input.rb
+test/test_gem_package_tar_output.rb
+test/test_gem_package_tar_reader.rb
+test/test_gem_package_tar_reader_entry.rb
+test/test_gem_package_tar_writer.rb
+test/test_gem_package_task.rb
+test/test_gem_platform.rb
+test/test_gem_remote_fetcher.rb
+test/test_gem_requirement.rb
+test/test_gem_server.rb
+test/test_gem_source_index.rb
+test/test_gem_source_info_cache.rb
+test/test_gem_source_info_cache_entry.rb
+test/test_gem_spec_fetcher.rb
+test/test_gem_specification.rb
+test/test_gem_stream_ui.rb
+test/test_gem_uninstaller.rb
+test/test_gem_validator.rb
+test/test_gem_version.rb
+test/test_gem_version_option.rb
+test/test_kernel.rb
